--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,28 @@
 
+.screen-container
+{
+  /* border: 1px black solid; */
+  padding: 5px;
+  height: 500px;
+}
+
+.screen
+{
+  /* border: 1px black solid; */
+  width: 49%;
+  height: 100%;
+}
+
+.screen-left
+{
+  float: left;
+}
+
+.screen-right
+{
+  float: right;
+}
+
 .stationDeleteButton
 {
   float: right;
