--- a/src/1024x600_v2.ui
+++ b/src/1024x600_v2.ui
@@ -297,7 +297,7 @@
            </size>
           </property>
           <property name="text">
-           <string>STOP</string>
+           <string>(0) STOP</string>
           </property>
          </widget>
         </item>
