--- a/src/1024x600_v2.ui
+++ b/src/1024x600_v2.ui
@@ -92,6 +92,16 @@
           </layout>
          </item>
          <item>
+          <widget class="QLabel" name="label_info_dls">
+           <property name="text">
+            <string>radio text (DLS)</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QLabel" name="label_time">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -121,25 +131,8 @@
          </item>
          <item>
           <layout class="QGridLayout" name="gridLayout_2">
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_5">
-             <property name="text">
-              <string>language:</string>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-             </property>
-            </widget>
-           </item>
            <item row="1" column="1">
             <widget class="QLabel" name="label_info_country">
-             <property name="text">
-              <string>---</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="QLabel" name="label_info_language">
              <property name="text">
               <string>---</string>
              </property>
