change radiolist focus

--- a/src/1024x600_v2.ui
+++ b/src/1024x600_v2.ui
@@ -332,7 +332,7 @@
        </sizepolicy>
       </property>
       <property name="focusPolicy">
-       <enum>Qt::WheelFocus</enum>
+       <enum>Qt::NoFocus</enum>
       </property>
       <property name="sizeAdjustPolicy">
        <enum>QAbstractScrollArea::AdjustToContentsOnFirstShow</enum>
